# sarva

./: .gitignore  BUILD-JOURNAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-bundle.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  Onboarding.test.tsx  Onboarding.tsx  events.ts  index.css  setupTests.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
core/: pyproject.toml
core/sarva/: __init__.py  audio.py  cli.py  config.py  distill.py  mcp_client.py  runtime.py
core/sarva/agent/: __init__.py  budget.py  events.py  loop.py  tools.py
core/sarva/eval/: __init__.py  benchmarks.py  harness.py
core/sarva/memory/: __init__.py  session.py  vector.py
core/sarva/multimodal/: __init__.py  content.py  fetch.py
core/sarva/multimodal/degraders/: __init__.py  audio.py  document.py  image.py  video.py
core/sarva/providers/: __init__.py  anthropic_provider.py  base.py  foundry_provider.py  google_provider.py  mock.py  ollama_provider.py  openai_provider.py  registry.py
core/sarva/providers/data/: models.yaml  routing.yaml
core/sarva/server/: __init__.py  app.py  schemas.py
core/sarva/server/static/: index.html
core/sarva/server/static/assets/: index-B07PXFgI.css  index-Cg0lM8z3.js  index-Cl-14tT8.js  index-Cnpb7wst.js  index-D1KwcD8s.css  index-D9TaWyjC.js  index-DNi5E1iP.js  index-HD6tLZ2j.css  index-TysmNbCB.js  index-ecAv0e5M.css
docs/: agent-loop.md  distillation.md  eval.md  index.md  mcp.md  memory.md  mkdocs.yml  multimodal.md  packaging.md  providers.md
docs/foundry/: ablation.md  inference.md  recipes.md  tokenizer.md  training.md  transformer.md
examples/: 01_hello_model.py  02_tool_use.py  02_train_a_tokenizer.py  03_budget_limits.py  03_train_toy_transformer.py  04_confirmation_gating.py  04_pretrain_and_resume.py  05_web_fetch.py  06_real_corpus_pretraining.py  07_moe_transformer.py  08_long_context_rope_scaling.py  09_multimodal_vision_transformer.py  10_sft_toy_assistant.py  11_dpo_preference_tuning.py  12_distillation_to_sft.py  13_rl_coding_environment.py  14_grpo_rl_training.py  15_kv_cache_inference.py  16_foundry_recipes.py  17_reasoning_token_training.py  18_ablation_harness.py  19_quantization.py
foundry/: LICENSE  pyproject.toml
foundry/sarva_foundry/: __init__.py  ablation.py  quantization.py
foundry/sarva_foundry/data/: __init__.py  corpus.py  dataset.py  near_dedup.py  provenance.py
foundry/sarva_foundry/inference/: __init__.py  generate.py
foundry/sarva_foundry/model/: __init__.py  attention.py  kv_cache.py  layers.py  moe.py  transformer.py  vision.py
foundry/sarva_foundry/recipes/: __init__.py  named.py  recipe.py
foundry/sarva_foundry/rl/: __init__.py  environment.py  tasks.py
foundry/sarva_foundry/tokenizer/: __init__.py  bpe.py
foundry/sarva_foundry/train/: __init__.py  dpo.py  reasoning.py  rl.py  schedule.py  sft.py  trainer.py
scripts/: _freeze_entrypoint.py  build-web.sh  freeze-server.sh  generate-icon.py
tests/conformance/: test_agent.py  test_anthropic_provider.py  test_anthropic_provider_thinking_roundtrip.py  test_audio.py  test_cli.py  test_config.py  test_content.py  test_degraders.py  test_distill.py  test_doctor.py  test_eval_harness.py  test_fetch.py  test_foundry_provider.py  test_google_provider.py  test_google_provider_image_out.py  test_google_provider_streaming.py  test_mcp_client.py  test_mcp_client_http.py  test_ollama_provider.py  test_openai_provider.py  test_openai_provider_streaming.py  test_provider.py  test_runtime.py  test_server.py  test_session.py  test_tools.py  test_vector_memory.py
tests/fixtures/: mcp_echo_server.py  mcp_http_echo_server.py
tests/foundry/: test_ablation.py  test_corpus.py  test_dataset.py  test_dpo.py  test_kv_cache.py  test_model.py  test_moe.py  test_near_dedup.py  test_provenance.py  test_quantization.py  test_reasoning.py  test_reasoning_training.py  test_recipes.py  test_rl_environment.py  test_rl_training.py  test_rope_scaling.py  test_schedule.py  test_sft.py  test_tokenizer.py  test_trainer.py  test_vision.py
tests/live/: test_live_mcp.py  test_live_providers.py
