[project]
name = "sarva"
version = "0.1.0.dev0"
description = "Sarva — an open, all-in-one multimodal AGI tool"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "anthropic>=0.68",
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "pillow>=11.0",
    "mcp>=1.28.1",
    "av>=18.0.0",
]

[project.scripts]
sarva = "sarva.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sarva"]
