[project]
name = "sarva"
version = "0.1.0.dev0"
description = "Sarva — an open, all-in-one multimodal AGI tool"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "anthropic>=0.68",
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "pillow>=11.0",
    "mcp>=1.28.1",
    "av>=18.0.0",
    "openai>=2.47.0",
    "google-genai>=2.14.0",
]

[project.optional-dependencies]
# `sarva_foundry` (torch + this project's own from-scratch training code)
# stays out of the hard dependency list on purpose -- most Sarva installs
# never train or run a local checkpoint and shouldn't need to pull in
# torch. See core/sarva/providers/foundry_provider.py for the adapter this
# unlocks. Within this repo's own uv workspace, `sarva-foundry` resolves
# via the root pyproject's [tool.uv.sources] (a local workspace member,
# not (yet) published to PyPI) -- a real PyPI release of `sarva` would
# need `sarva-foundry` published there too, deferred packaging work not
# yet needed since this project isn't on PyPI yet.
foundry = ["sarva-foundry"]

[project.scripts]
sarva = "sarva.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sarva"]
