[project]
name = "sarva"
version = "0.1.0.dev0"
description = "Sarva — an open, all-in-one multimodal AGI tool"
license = "MIT"
# core/LICENSE is a deliberate, verified-working duplicate of the
# repo-root LICENSE, not a stray copy -- hatchling's license-files globs
# are sandboxed to the project directory (confirmed empirically:
# license-files = ["../LICENSE"] built without error but silently
# bundled nothing), so a real, independently-installable package needs
# its own in-tree copy to actually ship the license text. Keep in sync
# with the root LICENSE if it's ever amended.
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "anthropic>=0.68",
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "pillow>=11.0",
    "mcp>=1.28.1",
    "av>=18.0.0",
    "openai>=2.47.0",
    "google-genai>=2.14.0",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
# `sarva_foundry` (torch + this project's own from-scratch training code)
# stays out of the hard dependency list on purpose -- most Sarva installs
# never train or run a local checkpoint and shouldn't need to pull in
# torch. See core/sarva/providers/foundry_provider.py for the adapter this
# unlocks. Within this repo's own uv workspace, `sarva-foundry` resolves
# via the root pyproject's [tool.uv.sources] (a local workspace member,
# not (yet) published to PyPI) -- a real PyPI release of `sarva` would
# need `sarva-foundry` published there too, deferred packaging work not
# yet needed since this project isn't on PyPI yet.
foundry = ["sarva-foundry"]
# Local speech-to-text (see sarva/audio.py). Text-to-speech needs no new
# dependency -- it shells out to the operating system's own bundled
# engine (macOS `say`, Linux `espeak`/`espeak-ng`) -- but real local STT
# has no OS-native equivalent to shell out to, so `faster-whisper` earns
# its place as a genuinely optional extra the same way sarva-foundry
# does. Its own hard dependencies pull in no torch (confirmed via
# `importlib.metadata.requires("faster-whisper")` before adding this),
# so this stays a lightweight extra, not a second heavy ML stack next to
# sarva[foundry].
audio = ["faster-whisper>=1.0"]

[project.scripts]
sarva = "sarva.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sarva"]
