[project]
name = "sarva-foundry"
version = "0.1.0.dev0"
description = "Sarva Foundry — from-scratch model training code (tokenizer, transformer, pretraining, post-training)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sarva_foundry"]
